// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FederatedProviderButton applies style props 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 8,
          "width": "100%",
        },
        undefined,
        {
          "backgroundColor": "blue",
        },
      ],
    ]
  }
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/amazonLogo.png",
      }
    }
    style={
      [
        {
          "height": 20,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 20,
        },
        {
          "paddingHorizontal": 16,
        },
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "fontWeight": "400",
          },
          undefined,
        ],
      ]
    }
  >
    Sign In with Amazon
  </Text>
</View>
`;

exports[`FederatedProviderButton renders default button as expected 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "borderWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 8,
          "width": "100%",
        },
        undefined,
        undefined,
      ],
    ]
  }
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/amazonLogo.png",
      }
    }
    style={
      [
        {
          "height": 20,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 20,
        },
        {
          "paddingHorizontal": 16,
        },
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "fontWeight": "400",
          },
          undefined,
        ],
      ]
    }
  >
    Sign In with Amazon
  </Text>
</View>
`;
